<?php

namespace App\Models;

use Database\Factories\UserFactory;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

class User extends Authenticatable
{
    /** @use HasFactory<UserFactory> */
    use HasFactory, Notifiable;

    protected $fillable = [
        'name',
        'email',
        'password',
        'role',
    ];

    protected $hidden = [
        'password',
        'remember_token',
    ];

    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
        ];
    }

    public function isAdmin(): bool
    {
        return $this->role === 'admin';
    }

    public function isTechnician(): bool
    {
        return $this->role === 'technician';
    }

    public function isCashier(): bool
    {
        return $this->role === 'cashier';
    }

    public function canCheckout(): bool
    {
        return $this->isAdmin() || $this->isCashier();
    }

    public function canRepair(): bool
    {
        return $this->isAdmin() || $this->isTechnician();
    }

    public function assignedServices(): HasMany
    {
        return $this->hasMany(ServiceOrder::class, 'technician_id');
    }
}
